# snippets-and-notes

./: .gitignore  README.md
ansible/: .travis.yml  test.yml
ansible/ansible-agent/: .gitignore  CHANGELOG.md  README.md
ansible/detect-secrets-server/: playbook.yml
ansible/fact-dump/: playbook.yml
ansible/post-eks/: vars.yml
ansible/pre-eks/: playbook.yml  vars.yml
c++/unknown/: Vagrantfile
c++/unknown/src/: CMakeLists.txt  main.cpp
c++/unknown/src/addon/: CMakeLists.txt  addon.cpp
c++/unknown/src/configure/: CMakeLists.txt  configure.cpp
c++/unknown/src/infrastructure/: CMakeLists.txt  infrastructure.cpp
c++/unknown/src/platform/: CMakeLists.txt  platform.cpp
c++/unknown/src/provision/: CMakeLists.txt  provision.cpp
c++/unknown/src/role/: CMakeLists.txt  role.cpp
c++/unknown/src/validate/: CMakeLists.txt  validate.cpp
consul/: ping_healthcheck.json  web.json
ctdt-optimizer/: README.md
ctdt-optimizer/data/: params.yaml
icinga/vagrant/: Vagrantfile
jenkins/container/: Jenkinsfile
jenkins/eks/: Jenkinsfile
jenkins/immutable/: Jenkinsfile
jenkins/puppet/: Jenkinsfile
kubernetes/manifests/: apache-deployment.yaml  batch-task.yaml  configmap-deploy-fed.yaml  configmap-fed.yaml  cron-task.yaml  custom-endpoint.yaml  http-gce-pd-controller.yaml  http-gce-pd-service.yaml  quota.yaml  (+11 more)
nomad/: client1.hcl  client2.hcl  example.nomad  server.hcl
puppet/: .rubocop.yml
python/: ad_hostname_set.py  ad_workspaces_users.py  kafka_snippets.py  kube_snippets.py
ruby/: env_setup.rb
serverspec/: Vagrantfile
zauber-automato/: Dockerfile
(+140 files in other folders)
